--- a/style.css
+++ b/style.css
@@ -14,10 +14,10 @@ height: 500px;
  width:1000px;
 height: 500px;
 position: relative;
-background-image: url(imagenes/Atardecer.jpg);
+background-image:url(imagenes/nubes.gif);
 background-size: cover;
 background-repeat: no-repeat;
-    box-shadow: inset 10px 10px 100px black;
+    box-shadow: inset 10px 10px 350px black;
 overflow: hidden;
     
 } 
@@ -51,7 +51,9 @@ height: 300px;
 width: 1000px;
 position: absolute;
 top:50%;
-background-image: url(mar.jpg);
+background-image:url(imagenes/energia_bajo_mar.gif);
+background-repeat:repeat;
+    background-size: cover;
 box-shadow: inset 10px 10px 100px black;
 }
 #peces{
